# RadonFrameworkExample

./: CMakeLists.txt  LICENSE
code/: CMakeLists.txt  Integrate.cmake
code/client/: main.cpp  systemtray.cpp  window.cpp  window.hpp
code/console/: console.cpp
code/renderer/: Color3D.glsl  main.cpp  vec.hpp  window.cpp  window.hpp
code/shared/: AMDGPUService.cpp  AMDGPUService.hpp  NvidiaGPUService.cpp  NvidiaGPUService.hpp  OpenGLModel.cpp  OpenGLModel.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp
code/systemtray/: systemtray.cpp
code/ui/: window.cpp  window.hpp
code/window/: window.cpp  window.hpp
